--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FornecedorBase;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "AllowedHosts": "*"
 }
