Criação da base via migrations

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FornecedorBase;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=localhost,1433;Database=FornecedorMinimalApi;User ID=user;Password=123456"
   },
   "AllowedHosts": "*"
 }
