Criação dos verbos PUT e DELETE

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=FornecedorMinimalApi;User ID=user;Password=123456"
+    "DefaultConnection": "Server=localhost,1433;Database=FornecedorMinimalApi;User ID=;Password="
   },
   "AllowedHosts": "*"
 }
