add filtros de autorização nos endpoints

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=FornecedorMinimalApi;User ID=;Password="
+    "DefaultConnection": "Server=localhost,1433;Database=FornecedorMinimalApi;User ID=maverick;Password="
+  },
+  "AppSettings": {
+    "SecretKey": "MYSECRETSUPERSECRET",
+    "Expiration": 2,
+    "Issuer": "minimalFornecedor",
+    "Audience": "https://localhost"
   },
   "AllowedHosts": "*"
 }
