--- a/minimalFornecedor.csproj
+++ b/minimalFornecedor.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MiniValidation" Version="0.9.0" />
+    <PackageReference Include="NetDevPack.Identity" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
